
-Miscellaneous user experience improvements

-Housekeeping / code cleanup and optimization

v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.15.2:

-BUG FIX: Fix for prettying up decimals, when no decimals are present on raw FIAT price data

-Config settings (in 'general' section) to have fine-grained control over how many decimals display for asset prices

-Cleaned up default demo markets

-RSS feeds more evenly pre-cached during background task runtimes

-Quicker first-time run for new installs background tasks

v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------



-------------------------------------------------------------------
5.15.3:

-BUG FIX: Desktop editions admin iframe pages zoom level now same as parent page

-BUG FIX: Admin iframes break out into parent page if logged out (showing admin login form on parent page)

v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS

v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

-------------------------------------------------------------------






