@@ -5553,6 +5553,8 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Admin iframes break out into parent page if logged out (showing admin login form on parent page)
 
+-Additional first-time run optimizations for new installs background tasks
+
 v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS
 
 v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
